Add hero section component

--- a/movie-app/src/app/app.component.html
+++ b/movie-app/src/app/app.component.html
@@ -1,8 +1,4 @@
-@for (movie of moviesCollection; track $index) {
-  <div>
-    <h3>{{movie.title}}</h3>
-  </div>
-
-}
-
+<app-header />
+<app-main />
+<app-footer />
 <router-outlet />
