--- a/movie-app/src/app/core/header/header.component.html
+++ b/movie-app/src/app/core/header/header.component.html
@@ -1,13 +1,13 @@
 <header>
     <div class="nav-container">
         <div class="logo-container">
-            <a href=""><p><span>Movie</span>Hub</p></a>
+            <a routerLink="/home"><p><span>Movie</span>Hub</p></a>
         </div>
         <div class="main-fn-container">
             <ul>
                 <li>
-                    <a href="#">Home</a>
-                    <a href="#">Catalog</a>
+                    <a routerLink="/home">Home</a>
+                    <a routerLink="/catalog">Catalog</a>
                     <a href="#">About</a>
                 </li>
             </ul>
@@ -15,8 +15,8 @@
         <div class="signup-container">
             <ul>
                 <li>
-                    <a href="#">Login</a>
-                    <a href="#">Register</a>
+                    <a routerLink="/login">Login</a>
+                    <a routerLink="/register">Register</a>
                 </li>
             </ul>
         </div>
