--- a/movie-app/src/app/shared/hero-section/hero-section.component.html
+++ b/movie-app/src/app/shared/hero-section/hero-section.component.html
@@ -4,12 +4,12 @@
     </div>
     <div class="description">
         
-        <p class="welcome-mgs">Dive into the world of cinema with <a href="#">MovieHub</a></p>
+        <p class="welcome-mgs">Dive into the world of cinema with <a routerLink="/home">MovieHub</a></p>
 
         <p class="signup-msg">Sign in to access your Watchlist<br>Save shows and movies to keep track of what you want to watch.</p>
         <div class="signup-container">
-            <a href="#">Login</a>
-            <a href="#">Register</a>
+            <a routerLink="/login">Login</a>
+            <a routerLink="/register">Register</a>
         </div>
     </div>
 </div>
