--- a/movie-app/src/app/user/login/login.component.html
+++ b/movie-app/src/app/user/login/login.component.html
@@ -22,6 +22,6 @@
 
             <input type="submit" value="Login">
         </div>
-        <p>Don't have an account? <a href="#">Register</a></p>
+        <p>Don't have an account? <a routerLink="/register">Register</a></p>
     </div>
 </div>
