--- a/movie-app/src/app/user/register/register.component.html
+++ b/movie-app/src/app/user/register/register.component.html
@@ -27,6 +27,6 @@
 
             <input type="submit" value="Register">
         </div>
-        <p>Alredy have an account? <a href="#">Login</a></p>
+        <p>Alredy have an account? <a routerLink="/login">Login</a></p>
     </div>
 </div>
