--- a/movie-app/src/app/details/details.component.css
+++ b/movie-app/src/app/details/details.component.css
@@ -2,15 +2,20 @@
     max-width: 1280px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
     margin: auto;
     color: white;
+    padding: 30px 0;
+}
+
+.title-container p {
+    font-size: 2.5rem;
 }
 
 .poster-trailer-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
     padding: 10px;
     justify-content: center;
 }
@@ -30,4 +35,29 @@
 .trailer-holder img {
     width: 100%;
     height: 100%;
+    border-radius: 20px;
+}
+
+.genre-container ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    gap: 20px;
+}
+
+.genre-container ul li {
+    border: solid 1px white;
+    padding: 5px 15px;
+    border-radius: 20px;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 70%;
+}
+
+.description p {
+    font-size: 1.2rem;
 }
