--- a/movie-app/src/app/user/login/login.component.css
+++ b/movie-app/src/app/user/login/login.component.css
@@ -48,13 +48,12 @@
 .input-container label {
   text-align: left;
   font-size: 1.5rem;
-  color: #FF3227;
   font-weight: bold;
 }
 
 .form input {
   padding: 10px 20px;
-  border: solid 3px #7A42E3;
+  border: solid 3px rgb(78, 78, 78);
   background-color: rgb(223, 223, 223);
   border-radius: 15px;
 }
@@ -63,16 +62,18 @@ input:focus {
   outline: none;
 }
 
-.form input[type=submit] {
+form button {
   margin-top: 40px;
   border: solid 3px #FF3227;
   background-color: #FF3227;
   font-size: 1.5rem;
   font-weight: bold;
   color: white;
+  border-radius: 15px;
+  padding: 10px 20px;
 }
 
-.form input[type=submit]:hover {
+form button:hover {
   border: solid 3px #7A42E3;
   background-color: #7A42E3;
 }
@@ -81,4 +82,16 @@ input:focus {
 color: #FF3227;
 text-decoration: underline;
 font-size: 1.2rem;
+}
+
+.firestore-error,
+.error {
+  color: #FF3227;
+  font-size: 1.5rem;
+  text-align: center;
+  font-weight: bold;
+}
+
+label span {
+  color: #FF3227;
 }
