--- a/movie-app/src/app/user/login/login.component.html
+++ b/movie-app/src/app/user/login/login.component.html
@@ -4,24 +4,82 @@
     </div>
     <div class="login">
         <h1>Login</h1>
-        <div class="form">
+
+        @if (errorMessage) {
+            <div>
+                @if(errorMessage === 'auth/invalid-credential') {
+                    <p class="firestore-error">
+                        Wrong email or password!
+                    </p>
+                }
+            </div>
+        }
+
+        @if (inputEmail?.touched) {
+            <div>
+                @if (inputEmail?.errors?.['required']) {
+                <p class="error">
+                    Email is required!
+                </p>
+                }
+
+                @if (inputEmail?.errors?.['emailValidator']) {
+                <p class="error">
+                    {{'Email must be in this format example@gmail.com!'}}
+                </p>
+                }
+            </div>
+            }
+
+            @if (inputPassword?.touched) {
+                <div>
+                    @if (inputPassword?.errors?.['required']) {
+                    <p class="error">
+                        Password is required!
+                    </p>
+                    }
+    
+                    @if (inputPassword?.errors?.['minlength']) {
+                    <p class="error">
+                        Password must be at least 6 characters!
+                    </p>
+                    }
+                </div>
+            }
+        
+        <form class="form" #form="ngForm" (ngSubmit)="login(form)">
+
             <div class="input-container">
-                <label for="name">Name</label>
-                <input type="text" id="name" placeholder="Name">
+                <label for="email">Email<span>*</span></label>
+                <input 
+                    type="email" 
+                    id="email" 
+                    name="email"
+                    placeholder="example@gmail.com"
+                    ngModel
+                    #inputEmail="ngModel" 
+                    required
+                    appEmail
+                    />
             </div>
 
             <div class="input-container">
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Email">
+                <label for="password">Password<span>*</span></label>
+                <input 
+                    type="password" 
+                    id="password" 
+                    name="password"
+                    placeholder="password"
+                    ngModel
+                    #inputPassword="ngModel" 
+                    required
+                    minlength="6"
+                    />
             </div>
 
-            <div class="input-container">
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="password">
-            </div>
+            <button>Login</button>
+        </form>
 
-            <input type="submit" value="Login">
-        </div>
         <p>Don't have an account? <a routerLink="/register">Register</a></p>
     </div>
 </div>
