--- a/movie-app/src/app/user/register/register.component.html
+++ b/movie-app/src/app/user/register/register.component.html
@@ -4,29 +4,116 @@
     </div>
     <div class="register">
         <h1>Register</h1>
-        <div class="form">
+
+        @if (errorMessage) {
+            <div>
+                @if(errorMessage === 'auth/email-already-in-use') {
+                    <p class="firestore-error">
+                        This email is already taken!
+                    </p>
+                }
+            </div>
+        }
+
+        @if (inputEmail?.touched) {
+            <div>
+                @if (inputEmail?.errors?.['required']) {
+                <p class="error">
+                    Email is required!
+                </p>
+                }
+
+                @if (inputEmail?.errors?.['emailValidator']) {
+                <p class="error">
+                    {{'Email must be in this format example@gmail.com!'}}
+                </p>
+                }
+            </div>
+        }
+
+        @if (inputPassword?.touched) {
+            <div>
+                @if (inputPassword?.errors?.['required']) {
+                <p class="error">
+                    Password is required!
+                </p>
+                }
+
+                @if (inputPassword?.errors?.['minlength']) {
+                <p class="error">
+                    Password must be at least 6 characters!
+                </p>
+                }
+            </div>
+        }
+
+        @if (inputRePassword?.touched) {
+            <div>
+                @if (inputRePassword?.errors?.['required']) {
+                <p class="error">
+                    Password is required!
+                </p>
+                }
+            </div>
+        }
+
+        <form class="form" #form="ngForm" (ngSubmit)="register(form)">
             <div class="input-container">
-                <label for="name">Name</label>
-                <input type="text" id="name" placeholder="Name">
+                <label for="username">Username</label>
+                <input 
+                    type="text" 
+                    id="username" 
+                    name="username"
+                    placeholder="Username"
+                    ngModel
+                    #inputUsername="ngModel" 
+                    />
             </div>
 
             <div class="input-container">
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Email">
+                <label for="email">Email<span>*</span></label>
+                <input 
+                    type="email" 
+                    id="email" 
+                    name="email"
+                    placeholder="Email"
+                    ngModel
+                    #inputEmail="ngModel" 
+                    required
+                    appEmail
+                    />
             </div>
 
             <div class="input-container">
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="password">
+                <label for="password">Password<span>*</span></label>
+                <input 
+                    type="password" 
+                    id="password" 
+                    name="password"
+                    placeholder="password"
+                    ngModel
+                    #inputPassword="ngModel" 
+                    required
+                    minlength="6"
+                    />
             </div>
 
             <div class="input-container">
-                <label for="re-pass">Repeat password</label>
-                <input type="password" id="re-pass" placeholder="Repeat password">
+                <label for="rePassword">Repeat passwords<span>*</span></label>
+                <input 
+                    type="password" 
+                    id="rePassword" 
+                    name="rePassword"
+                    placeholder="Repeat password"
+                    ngModel
+                    #inputRePassword="ngModel" 
+                    required
+                    />
             </div>
 
-            <input type="submit" value="Register">
-        </div>
+            <button>Register</button>
+
+        </form>
         <p>Alredy have an account? <a routerLink="/login">Login</a></p>
     </div>
 </div>
