--- a/movie-app/src/app/details/details.component.html
+++ b/movie-app/src/app/details/details.component.html
@@ -6,7 +6,7 @@
 
     <div class="poster-trailer-container">
         <div class="poster-holder">
-            <img src="{{movie.image}}" alt="poster">
+            <img src="{{movie.img}}" alt="poster">
         </div>
 
         <div class="trailer-holder">
