Make changes in register and login according to new back-end

--- a/movie-app/src/app/user/login/login.component.html
+++ b/movie-app/src/app/user/login/login.component.html
@@ -25,7 +25,7 @@
 
                 @if (inputEmail?.errors?.['emailValidator']) {
                 <p class="error">
-                    {{'Email must be in this format example@gmail.com!'}}
+                    {{'Email must be in format example@abv.bg!'}}
                 </p>
                 }
             </div>
@@ -55,7 +55,7 @@
                     type="email" 
                     id="email" 
                     name="email"
-                    placeholder="example@gmail.com"
+                    placeholder="example@abv.bg"
                     ngModel
                     #inputEmail="ngModel" 
                     required
