--- a/movie-app/src/app/core/header/header.component.html
+++ b/movie-app/src/app/core/header/header.component.html
@@ -1,29 +1,31 @@
 <header>
     <div class="nav-container">
         <div class="logo-container">
-            <a routerLink="/home"><p><span>Movie</span>Hub</p></a>
+            <a routerLink="/home">
+                <p><span>Movie</span>Hub</p>
+            </a>
         </div>
         <div class="main-fn-container">
             <ul>
                 <li>
                     <a routerLink="/home">Home</a>
                     <a routerLink="/catalog">Catalog</a>
-                    <a href="#">About</a>
                 </li>
             </ul>
         </div>
         <div class="signup-container">
             <ul>
                 <li>
-                    @if (authService.currentUserSig() == null) {
+                    @if(isLoggedIn) {
+                        <a routerLink="/profile">Profile</a>
+                        <a routerLink="/create">Add Movie</a>
+                        <button (click)="logout()">Logout</button>
+                    } @else {
                         <a routerLink="/login">Login</a>
                         <a routerLink="/register">Register</a>
-                    } @else {
-                        <a routerLink="/profile">Profile</a>
-                        <button (click)="logout()">Logout</button>
                     }
                 </li>
             </ul>
         </div>
-    </div>  
+    </div>
 </header>
