Visualizing comments in details page

--- a/movie-app/src/app/movies/details/details.component.html
+++ b/movie-app/src/app/movies/details/details.component.html
@@ -20,22 +20,35 @@
             <div class="genre-container">
                 <ul>
                     @for (genre of movie.genre | splitString: ","; track $index) {
-                        <li>{{genre}}</li>
+                    <li>{{genre}}</li>
                     }
                 </ul>
             </div>
-    
+
             <p>{{movie.description}}</p>
             <p>Director: {{movie.director}}</p>
             <p><span>IMDb</span> rating: {{movie.rating}} / 10 <i class="fa-solid fa-star"></i></p>
         </div>
 
-            @if (user?._id === movie._ownerId) {
-                <div class="btns">
-                    <button class="edit" [routerLink]="['/edit/', movie._id]"><i class="fa-solid fa-pen-to-square"></i> Edit</button>
-                    <button class="delete" (click)="deleteMovie()"><i class="fa-solid fa-trash"></i> Delete</button>
-                </div>
-            }
+        @if (user?._id === movie._ownerId) {
+        <div class="btns">
+            <button class="edit" [routerLink]="['/edit/', movie._id]"><i class="fa-solid fa-pen-to-square"></i>
+                Edit</button>
+            <button class="delete" (click)="deleteMovie()"><i class="fa-solid fa-trash"></i> Delete</button>
+        </div>
+        }
+    </div>
+
+    <div class="comments-container">
+        <h2>Comments section</h2>
+
+        @for (comment of comments; track $index) {
+        <div class="comment-holder">
+            <p class="author">{{comment.author.username}} <i class="fa-solid fa-comment-dots"></i></p>
+            <p class="comment">{{comment.content}}</p>
+        </div>
+        }
+
     </div>
 
 </div>
