--- a/movie-app/src/app/movies/details/details.component.css
+++ b/movie-app/src/app/movies/details/details.component.css
@@ -108,3 +108,43 @@
 .btns .delete:hover {
     background-color: #FF3227;
 }
+
+.comments-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-top: 30px;
+    width: 90%;
+}
+
+.comments-container h2 {
+    font-size: 2rem;
+    border-left: 10px solid #f5c518;
+    padding-left: 10px;
+    margin-bottom: 20px;
+}
+
+.comment-holder {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    border: 1px solid rgb(180, 180, 180);
+    border-radius: 5px;
+}
+
+.author {
+    font-size: 1.4rem;
+
+}
+
+p.author i {
+    font-size: 1.4rem;
+    padding-left: 5px;
+    color: #f5c518;
+}
+
+.comment {
+    font-size: 1.2rem;
+    padding-left: 20px;
+}
