--- a/movie-app/src/app/core/header/header.component.css
+++ b/movie-app/src/app/core/header/header.component.css
@@ -50,13 +50,18 @@ button {
     font-weight: 500;
     border-bottom: solid 3px black;
     padding: 5px;
-    color: white;
+    color: #FF3227;
 }
 
 button:hover {
-    color: #FF3227;
     border-bottom: solid 3px white;
 }
+
+button i {
+    padding-left: 5px;
+}
+
+
 
 
 
