Implementing pagination in catalog page

--- a/movie-app/src/app/movies/catalog/catalog.component.html
+++ b/movie-app/src/app/movies/catalog/catalog.component.html
@@ -12,4 +12,9 @@
         </div>
         }
     </div>
+    <div class="pagination-container">
+        @for (page of paginationArray; track $index) {
+            <button class="pagination-btn" (click)="onPageChange(page)">{{page}}</button>
+        }
+    </div>
 </div>
