--- a/movie-app/src/app/user/register/register.component.html
+++ b/movie-app/src/app/user/register/register.component.html
@@ -5,18 +5,19 @@
     <div class="register">
         <h1>Register</h1>
 
-        <!-- TODO change with server error -->
-        <!-- @if (errorMessage) {
-            <div>
-                @if(errorMessage === 'auth/email-already-in-use') {
-                    <p class="firestore-error">
-                        This email is already taken!
-                    </p>
-                }
-            </div>
-        } -->
+        @if (errorMessage) {
+            <p class="error">{{errorMessage}}</p>
+        }
 
-        @if (inputUsername?.touched) {
+        <form class="form" #form="ngForm" (ngSubmit)="register(form)"
+            [appMatchPasswords]="{ password: 'password', confirmPassword: 'rePassword' }">
+            <div class="input-container">
+                <label for="username">Username<span>*</span></label>
+                <input type="text" id="username" name="username" placeholder="Username" ngModel #inputUsername="ngModel"
+                    required minlength="3" />
+            </div>
+
+            @if (inputUsername?.touched) {
             <div>
                 @if (inputUsername?.errors?.['required']) {
                 <p class="error">
@@ -25,14 +26,20 @@
                 }
 
                 @if (inputUsername?.errors?.['minlength']) {
-                    <p class="error">
-                        Username must be at least 3 characters!
-                    </p>
-                    }
+                <p class="error">
+                    Username must be at least 3 characters!
+                </p>
+                }
             </div>
-        }
+            }
 
-        @if (inputEmail?.touched) {
+            <div class="input-container">
+                <label for="email">Email<span>*</span></label>
+                <input type="email" id="email" name="email" placeholder="example@abv.bg" ngModel #inputEmail="ngModel"
+                    required appEmail />
+            </div>
+
+            @if (inputEmail?.touched) {
             <div>
                 @if (inputEmail?.errors?.['required']) {
                 <p class="error">
@@ -46,9 +53,15 @@
                 </p>
                 }
             </div>
-        }
+            }
 
-        @if (inputPassword?.touched) {
+            <div class="input-container">
+                <label for="password">Password<span>*</span></label>
+                <input type="password" id="password" name="password" placeholder="password" ngModel
+                    #inputPassword="ngModel" required minlength="6" />
+            </div>
+
+            @if (inputPassword?.touched) {
             <div>
                 @if (inputPassword?.errors?.['required']) {
                 <p class="error">
@@ -62,75 +75,24 @@
                 </p>
                 }
             </div>
-        }
-
-        @if (inputRePassword?.touched) {
-            <div>
-                @if (inputRePassword?.errors?.['required']) {
-                <p class="error">
-                    Password is required!
-                </p>
-                }
-            </div>
-        }
-
-        <form class="form" #form="ngForm" (ngSubmit)="register(form)">
-            <div class="input-container">
-                <label for="username">Username<span>*</span></label>
-                <input 
-                    type="text" 
-                    id="username" 
-                    name="username"
-                    placeholder="Username"
-                    ngModel
-                    #inputUsername="ngModel"
-                    required
-                    minlength="3"
-                    />
-            </div>
-
-            <div class="input-container">
-                <label for="email">Email<span>*</span></label>
-                <input 
-                    type="email" 
-                    id="email" 
-                    name="email"
-                    placeholder="example@abv.bg"
-                    ngModel
-                    #inputEmail="ngModel" 
-                    required
-                    appEmail
-                    />
-            </div>
-
-            <div class="input-container">
-                <label for="password">Password<span>*</span></label>
-                <input 
-                    type="password" 
-                    id="password" 
-                    name="password"
-                    placeholder="password"
-                    ngModel
-                    #inputPassword="ngModel" 
-                    required
-                    minlength="6"
-                    />
-            </div>
+            }
 
             <div class="input-container">
                 <label for="rePassword">Repeat passwords<span>*</span></label>
-                <input 
-                    type="password" 
-                    id="rePassword" 
-                    name="rePassword"
-                    placeholder="Repeat password"
-                    ngModel
-                    #inputRePassword="ngModel" 
-                    required
-                    />
+                <input type="password" id="rePassword" name="rePassword" placeholder="Repeat password" ngModel
+                    #inputRePassword="ngModel" required />
             </div>
 
-            <button>Register</button>
+            @if (form.errors?.['passwordsMismatch']) {
+            <div>
+                <p class="error">
+                    Passwords do not match!
+                </p>
+            </div>
+            }
+
+            <button [disabled]="form.invalid"
+                [style]="{backgroundColor: form.invalid ? 'grey' : 'green'}">Register</button>
 
         </form>
         <p>Alredy have an account? <a routerLink="/login">Login</a></p>
