Add some fonts and minor changes

--- a/movie-app/src/app/core/header/header.component.html
+++ b/movie-app/src/app/core/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="nav-container">
         <div class="logo-container">
             <a routerLink="/home">
-                <p><span>Movie</span>Hub</p>
+                <p class="nosifer"><span>Movie</span>Hub</p>
             </a>
         </div>
         <div class="main-fn-container">
