--- a/movie-app/src/app/hero-section/hero-section.component.html
+++ b/movie-app/src/app/hero-section/hero-section.component.html
@@ -1,5 +1,5 @@
 <div class="hero-section-container">
-    <h1 class="welcome-mgs">Dive into the world of cinema with MovieHub</h1>
+    <h1 class="welcome-mgs">Dive into the world of cinema</h1>
 
     <div class="image-holder">
         <img src="movie-poster.webp" alt="poster">
