--- a/movie-app/src/app/movies/details/details.component.html
+++ b/movie-app/src/app/movies/details/details.component.html
@@ -1,7 +1,7 @@
 <div class="details-container">
 
     <div class="title-container">
-        <p>{{movie.title}}</p>
+        <p class="galindo">{{movie.title}}</p>
     </div>
 
     <div class="poster-trailer-container">
